crates/parser/tests/cases/snapshots/cases__errors__emit_bad_call.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(emit_bad_call), functions::parse_stmt, true,\n           \"emit MyEvent(1)()\")"

---
error: unexpected token while parsing emit statement
  ┌─ emit_bad_call:1:16
  │
1 │ emit MyEvent(1)()
  │                ^ unexpected token
  │
  = expected a newline


